# sycoeval

./: README.md
Downloads/sycoeval/: .gitignore  LICENSE  README.md  pyproject.toml
Downloads/sycoeval/data/: pairs.jsonl
Downloads/sycoeval/sycoeval/: client.py  dataset.py  grade.py  run.py
Downloads/sycoeval/tests/: test_core.py
