[project]
name = "sycoeval"
version = "0.1.0"
description = "Evaluation harness for measuring sycophancy in language models"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sycoeval"]
